<resources>
    <string name="app_name"><b>जनता मालिक</b></string>
    <string name="title">हमारा पैसा, हमारा अधिकार</string>
    <string name="team_list">श्रेय</string>
    <string name="kendra"><b>केन्द्र</b></string>
    <string name="rajya"><b>राज्य</b></string>
    <string name="corporation"><b>स्थानीय</b></string>
    <string name="taxkendra"><b>केन्द्र - टैक्स</b></string>
    <string name="Center_Subjects">सांसद की जिम्मेदारियाँ</string>
    <string name="state_subjects">विधायक की जिम्मेदारियाँ</string>
    <string name="Issues"><b>मुख्य मुद्दे</b></string>
    <string name="Money"><b>हमारा टैक्स का पैसा</b></string>
    <string name="Vote"><b>हमारा जन प्रतिनिधि</b></string>
    <string name="Button_donate_activity">समर्थन करें</string>
    <string name="menuItemDonate">समर्थन करें</string>
    <string name="menuItemContactUs">संपर्क करें</string>
    <string name="menuItemShare">शेयर करें</string>
    <string name="call_button">कॉल करें</string>
    <string name="email_button">ईमेल करें</string>
    <string name="CrimeIssue">अपराध</string>
    <string name="IssueInflation">महंगाई</string>
    <string name="IssueEducation">खराब शिक्षा</string>
    <string name="IssueClimate">प्रदूषण</string>
    <string name="IssueHealth">स्वास्थ्य सेवाओं की कमी</string>
    <string name="WomenSafety">महिला सुरक्षा</string>
    <string name="Cleanliness">साफ सफाई</string>
    <string name="MP">मेरा सांसद</string>
    <string name="MLA">मेरा विधायक</string>
    <string name="Parshad">मेरा पार्षद</string>
    <string name="mp">सांसद</string>
    <string name="mla">विधायक</string>
    <string name="parshad">पार्षद</string>
    <string name="mp_area">निर्वाचन क्षेत्र: </string>
    <string name="source_sansad">स्रोत - चुनाव आयोग में भरा नामांकन https://myneta.info</string>
    <string name="update_info">सांसद को फोन व ईमेल करें, हिचकिचाएँ नहीं।</string>
    <string name="donate_appeal">हम एक गैर-मुनाफा संस्था हैं। आपके चंदे से ही काम आगे बढ़ता है।</string>
    <string name="support_email"></string>
    <string name="add_issue">अपने मुद्दे जोड़ें</string>
    <string name="feedback">सुझाव लिखें</string>
    <string name="share_message">आइए सरकारी सेवाओं को बेहतर बनाएँ 😀
        \n\n जी हाँ, यब संभव है.
        \n सबसे बड़ी कुंजी होती है यह पता करना कि - इस समस्या के समाधान का कौन जिम्मेदार है?
        \n1 जनता मालिक ऐप डाउनलोड करिए
        \n2 अपनी जागरूकता बढ़ाइए, समाधान पाइए
        \n</string>
    <string name="state_text">राज्य</string>
    <string name="constituency_text">लोकसभा</string>
    <string name="assembly_text">विधानसभा</string>
    <string name="ward_text">वार्ड</string>
    <string name="democracy">हम सरकार कैसे चलाते हैं?</string>
    <string name="mp_duty"><b>हम अपने सांसद के माध्यम से सरकार चलातें हैं</b>
        \n1. सांसद मेरे सवालोंं को लोकसभा में पूछता है और सरकार से जवाब लेता हे
        \n2. सांसद लोकसभा की बहस में मेरे पक्ष को रखता है
        \n3. सांसद सरकार के खर्च और काम-काज समझकर मुझे बताता है</string>
    <string name="mp_optional"><b>सांसद लोगो से कैसे जुड़े</b>
        \nअखबार में लेख या सोशल मीडिया या जनसभाओं में</string>
    <string name="salary_Saansad"><b>वेतन 2.7 लाख प्रतिमाह</b> (भत्ते मिलाकर)
        \nदो लाख सत्तर हजार रुपये</string>
    <string name="mla_duty"><b>विधायक के जरूरी काम</b>
        \n1. मेरे सवालोंं को विधानसभा में पूछना और सरकार से जवाब लेना
        \n2. विधानसभा की बहसों में मेरे पक्ष को रखना
        \n3. राज्य सरकार के खर्च और काम-काज का हिसाब समझकर मुझे बताना</string>
    <string name="mla_optional"><b>गैर-जरूरी या वैकल्पिक</b>
        \nशादी या पार्टी या समारोह में जाना, सोशल मीडिया</string>
    <string name="next_version">आप भी दान दें या टीम में जुड़ें और अगले संस्करण में सहायता करें</string>
    <string name="tax_note">देश की प्रगति के लिए हम सब कई तरह के कर (टैक्स) देते हैं। विभिन्र वस्तुओं पर कर की दरें :</string>
    <string name="tax_total_center"><b>केंद्र सरकार को कुल सालाना टैक्स - सत्ताइस लाख छियासी हजार तीन सौ पचास करोड़ रू हम सब मिलकर देते हैं।</b></string>
    <string name="tax_center_details">हमारा टैक्स का पैसा खर्च कहाँ हो रहा है?</string>
    <string name="crore">करोड़</string>
    <string name="interest">ब्याज</string>
    <string name="defence">रक्षा</string>
    <string name="subsidy_food">छूट - भोजन</string>
    <string name="pension">पेंशन</string>
    <string name="transfer_to_states">राज्य को स्थानांतरण</string>
    <string name="rural_development">ग्रामीण विकास</string>
    <string name="transport">ट्रांसपोर्ट</string>
    <string name="tax_administration">टैक्स प्रशासन</string>
    <string name="home_affairs">गृह मंत्रालय</string>
    <string name="education">शिक्षा</string>
    <string name="others">अन्य सभी खर्चे</string>
    <string name="subsidy_fertilizer">छूट - उर्वरक</string>
    <string name="agriculture_and_allied">कृषि और संबद्ध
        \nगतिविधि</string>
    <string name="health">स्वास्थ्य</string>
    <string name="social_welfare">सामाजिक कल्याण</string>
    <string name="urban_development">शहरी विकास</string>
    <string name="energy">ऊर्जा</string>
    <string name="commerce_and_industry">वाणिज्य और उद्योग</string>
    <string name="subsidy_petroleum">छूट - पेट्रोलियम</string>
    <string name="scientific_department">वैज्ञानिक विभाग</string>
    <string name="it_and_telecom">आईटी और दूरसंचार</string>
    <string name="finance">वित्त</string>
    <string name="external_affairs">विदेशी मामले</string>
    <string name="union_territories">केंद्र शासित प्रदेश</string>
    <string name="planning_and_statistics">योजना और
        \nसांख्यिकी</string>
    <string name="development_north_east">पूर्वोत्तर का विकास</string>
    <string name="version_update">ऐप का नया संस्करण आ गया है, डाउनलोड करें</string>
    <string name="Option_Update">हाँ</string>
    <string name="Option_Later">बाद में</string>
    <string name="app_purpose">जो मुद्दे आपको रोज परेशान करते हैं.\nमुद्दे जिनपर अखबार, टीवी चुप रहते हैं.\n\nआपके लिए लाए हैं वो जानकारी,\nजो जनता को मालिक बनाती है!</string>
    <string name="User_appeal">अपने मुद्दों को जोड़ें,
        \nचुने हुए मुद्दे अगले हफ्ते दिखेंगें</string>
    <string name="add_issue_msg">अपना मुद्दा लिखेंं</string>
    <string name="update_contact_info">जानकारी सही करेंं। आपका नाम योगदान में जुड़ेगा।</string>
    <string name="feedback_msg">सुझाव दें</string>
    <string name="email_us_msg">आगे</string>
    <string name="donate">दान करें</string>
    <string name="switchText">यह मेरा मुद्दा है।</string>
    <string name="voter">वोटर</string>
    <string name="loksabha">लोकसभा</string>
    <string name="government_kendra">केंद्र सरकार</string>
    <string name="rajyasabha">विधानसभा</string>
    <string name="government_rajya">राज्य सरकार</string>
    <string name="contact">संपर्क करें</string>
    <string name="source_text">सालाना बजट 2019-20 https://www.indiabudget.gov.in/doc/Budget_at_Glance/budget_at_a_glance.pdf</string>
    <string name="head">नाम</string>
    <string-array name="MP_state_values">
        <item>उत्तर प्रदेश</item>
    </string-array>
    <string-array name="MP_area_values">
        <item>वाराणसी</item>
    </string-array>
    <string-array name="MLA_area_values">
        <item>वाराणसी कैंट</item>
    </string-array>
    <string-array name="Parshad_values">
        <item>छित्तुपुर, सिगरा</item>
    </string-array>
    <string name="notification_update">New version of app is available. Download.</string>
    <string name="notification_update_hi"></string>
    <string name="notification_update_mr"></string>
    <string name="kendra_budget_simple">27 लाख करोड़</string>
    <string name="kendra_budget">27,86,350 करोड़</string>
    <string name="rajya_budget">\??? करोड़</string>
    <string name="list_source_MP">सांसद निम्न विषयों पर कानून बनाता है:</string>
    <string name="list_source_MLA">विधायक निम्न विषयों पर कानून बनाता है:</string>
    <string name="source_responsibility_MP_MLA"><b>स्रोत</b> - <font fgcolor='#214EF3'><u>संविधान - लघु</u></font></string>
    <string name="source"><b>स्रोत</b> - <font fgcolor='#214EF3'><u>संविधान</u></font></string>
    <string name="disclaimer"><b>स्पष्टीकरण</b>: यह ऐप किसी सरकारी विभाग से नहीं जुड़ी है।</string>
    <string name="kendra_subjects">रोजगार, सामाजिक सुरक्षा, यूपीएससी,
        \nशिक्षा, रेल, राष्ट्रीय राजमार्ग,
        \nशेयर बाजार, पेट्रोल/सीएनजी पर कर, पोस्ट आफिस,
        \nनोट / सिक्के, बैंक,
        \nकंपनी कानून, कंपनी टैक्स, बीमा,
        \nसामान की गुणवत्ता, पेट्रोल, पेट्रोल का दाम,
        \nखान और तेलक्षेत्र, खान में श्रम, सीबीआई,
        \nनागरिकता, पासपोर्ट, रक्षा,
        \nवन, दवाई, जनगणना,
        \nअंतर-राज्यीय आवाजाही, दंड विधि, तलाक कानून, आदि </string>
    <string name="rajya_subjects">पुलिस, कानून व्यवस्था, राज्य लोकसेवा आयोग, उच्च न्यायालय के अधिकारी और सेवक, जेल, नगरनिगमों का गठन और शक्तियाँ,
        अस्पताल और औषधालय, तीर्थयात्राएं, शराब, खेती, पशुधन,
        जल - सिंचाई/ नहरें / निकास, भूमि, भूमि कर, मछलीपालन, राज्य के अंदर व्यवसाय कर, बाजार और मेेले,
        साहूकारी, कृषि ऋण मुक्ति, खेती पर कर, बिजली कर, वाहन कर,
        शिक्षा, सड़क, वन, आदि
        \n\nसंविधान 7वीं अनुसूची से</string>
    <string name="phone">फोन</string>
    <string name="email">ईमेल</string>
    <string name="mail_to_us">ऐप फिल्टरनेट फाउंडेशन द्वारा जनहित में बनाई गई है।</string>
    <string name="work_in_progress">कार्य प्रगति पर है</string>
    <string name="opensource">मुक्त स्रोत</string>
    <string name="saansad_is_key"><b>*</b> सूचना का अधिकार या कोर्ट में जनहित याचिका दूसरे स्तर के तरीके हैं।
        \n\nयह तरीके एक जिम्मेदार सांसद की कमी पूरी नहीं कर सकते।</string>
    <string name="vidhayak_is_key"><b>*</b> सूचना का अधिकार या कोर्ट में जनहित याचिका दूसरे स्तर के तरीके हैं।
        \n\nयह तरीके एक जिम्मेदार विधायक की कमी पूरी नहीं कर सकते।</string>
    <string name="gst_biscuit">18% जीएसटी</string>
    <string name="gst_cloth">12% जीएसटी</string>
    <string name="tax_petrol">100% टैक्स</string>
    <string name="itax_slabs">5 / 20 / 30%</string>
    <string name="land_sale">रजिस्ट्री</string>
    <string name="gst_exercise_book">12% जीएसटी</string>
    <string name="user_liking">अगर आपको ऐप अच्छा लगा</string>
    <string name="good">शेयर करें</string>
    <string name="very_good">दान दें</string>
    <string name="media_or_afeem">मीडिया या अफीम ?</string>
    <string name="mp_no_response">धरना कहाँ पर दें?</string>
    <string name="cleanliness">सफाई</string>
    <string name="poor_road">सड़क</string>
    <string name="electricity">बिजली</string>
    <string name="police">पुलिस/कानून-व्यवस्था</string>
    <string name="traffic">जाम में फंसी जनता</string>
    <string name="corruption">दफ्तर में घूस</string>
    <string name="train">देर से चलती रेल</string>
    <string name="business">नये उद्योग (स्टार्टप) की मुश्किलें</string>
    <string name="election_2019">2019 लोकसभा चुनाव</string>
    <string name="employment">नौकरी</string>
    <string name="hospital">बेहतर अस्पताल/प्राथमिक स्वास्थ्य केंद्र </string>
    <string name="drinking_water">पीने का पानी</string>
    <string name="agriculture_water">कृषि के लिए पानी की उपलब्धता</string>
    <string name="agriculture_loan">कृषि ऋण उपलब्धता</string>
    <string name="price_realization">कृषि उत्पादों के लिए सही मूल्य</string>
    <string name="agriculture_subsidy">बीज/उर्वरक के लिए कृषि सब्सिडी</string>
    <string name="public_transport">बेहतर सार्वजनिक परिवहन</string>
    <string name="sewage">सीवर</string>
    <string name="puzzle">पहेली</string>
    <string name="website"><u>www.filternet.in</u></string>
    <string name="phone_number">+91-7570000787</string>
    <string name="constitution_text">संविधान ?</string>
    <string name="constitution_1">मेरा वचन ही है शासन</string>
    <string name="constitution_2">हमें माहिषमती का संविधान पता है,
        \nलेकिन भारत का ?</string>
    <string name="constitution_online">आनलाईन पढ़ें</string>
    <string name="constitution_buy">आज ही एक कापी मगाएं (सिर्फ ₹ 100/-)</string>
    <string name="constitution_amazon"><font fgcolor='#214EF3'><u>अमेजन</u></font></string>
</resources>