<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:clickable="true"
        android:onClick="onclick_update_issue"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="mini" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="@string/constitution_text"
                app:titleTextColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/issue_text_left_margin"
                android:autoLink="web"
                android:gravity="center|center_horizontal"
                android:text="@string/constitution_1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textColorLink="@color/blue" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:padding="1dp"
                android:src="@drawable/shivgami" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/issue_text_left_margin"
                android:autoLink="web"
                android:gravity="center|center_horizontal"
                android:text="@string/constitution_2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textColorLink="@color/blue" />

            <TextView
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="@dimen/issue_text_left_margin"
                android:text="@string/constitution_online"
                android:textColor="@color/black"
                android:textColorLink="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="@dimen/issue_text_left_margin"
                android:text="@string/constitution_buy"
                android:textColor="@color/black"
                android:textColorLink="@color/blue" />

            <TextView
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="@dimen/issue_text_left_margin"
                android:text="@string/constitution_amazon"
                android:textColor="@color/black"
                android:textColorLink="@color/blue"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>