<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.filternet.jantamalik.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/title"
            app:titleTextColor="#ffffff">

            <Button
                android:id="@+id/puzzle_button"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="end"
                android:onClick="onclick_puzzle"
                android:text="@string/puzzle"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/home_button"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/green_badge"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="end"
                android:background="@drawable/green_badge"
                android:onClick="user_became_smart"
                android:visibility="gone"/>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill"
            android:background="@color/colorPrimary"
            app:tabSelectedTextColor="#ffffff"
            app:tabIndicatorHeight="2.5dp"
            app:tabTextAppearance="@style/NavigationTabTextAppeareance">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/issues"
                android:text="@string/Issues" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/nation"
                android:text="@string/kendra" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/states"
                android:text="@string/rajya" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>