<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    tools:context=".Contact">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:title="@string/contact"
        app:titleTextColor="@color/colorAccent" />

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:onClick="onclick_open_website"
        android:text="@string/website"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/website"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"
        android:text="@string/phone_number"
        android:onClick="onclick_call_us"/>

    <RelativeLayout
        android:id="@+id/donate_group"
        android:layout_below="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/donate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate_appeal"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/donate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donate_text"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true"
            android:text="@string/donate"
            android:textColor="@color/colorAccent"
            android:onClick="onclick_open_donate"
            android:background="@drawable/button_styling" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_or_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_below="@+id/donate_group"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#dcdcdc">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_issue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/add_issue_msg"
                    android:checked="false"
                    android:onClick="onclick_add_subject"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/radio_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:checked="false"
                    android:text="@string/update_contact_info"
                    android:onClick="onclick_add_subject"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RadioButton
                    android:id="@+id/radio_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/feedback_msg"
                    android:checked="false"
                    android:onClick="onclick_add_subject"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/options"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/whatsapp_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onclick_whatsapp_us"
                    android:src="@drawable/whatsapp"
                    app:backgroundTint="@color/colorPrimary" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/email_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onclick_email_us"
                    android:src="@drawable/ic_email_white_24dp"
                    app:backgroundTint="@color/colorPrimary" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_below="@+id/add_or_update"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#dcdcdc">

        <Button
            android:id="@+id/open_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/opensource"
            android:textColor="@color/colorAccent"
            android:onClick="onclick_github"
            android:background="@drawable/button_styling" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_below="@+id/github"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#dcdcdc">

        <Button
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/team_list"
            android:textColor="@color/colorAccent"
            android:onClick="onclick_credits"
            android:background="@drawable/button_styling" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</ScrollView>