<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/Issues_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="3dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/issues_cardView"
        android:layout_below="@id/Issues_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TextView
            android:paddingLeft="5dp"
            android:gravity="top"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_appeal"
            android:visibility="visible"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add_white_24dp"
            app:backgroundTint="@color/colorPrimary"
            android:layout_gravity="right"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/liking"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/issues_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/user_liking"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_below="@+id/liking"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:layout_margin="1dp"
            android:textColor="@color/colorAccent"
            android:onClick="onclick_share_button"
            android:background="@drawable/button_styling" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_good"
            android:layout_margin="1dp"
            android:textColor="@color/colorAccent"
            android:onClick="onclick_open_donate"
            android:background="@drawable/button_styling" />
    </LinearLayout>
</RelativeLayout>